# Reduce-token

./: .gitignore  README.md  pyproject.toml
.token-reduce/: config.json  graph.db
tests/: test_token_reduce.py
token_reduce/: __init__.py  analyzer.py  cli.py  config.py  context_pack.py  easy_mode.py  graph_store.py  hash_utils.py  installer.py  languages.py  watcher.py
